fix: 新增speaking style
